# src/routes/index.ts
@@ -7,6 +7,7 @@ import express, { Request, Response } from 'express'
 import helloRouter from './HelloRouter'
 import goodbyeRouter from './GoodbyeRouter'
 import { LogInfo } from '../utils/logger'
+import usersRouter from './UserRouter'
 
 // Server instance
 const server = express()
@@ -22,8 +23,9 @@ rootRouter.get('/', (req: Request, res: Response) => {
 
 // Redirections to Routers & Controllers
 server.use('/', rootRouter) // http://localhost:8000/api/
-server.use('/hello', helloRouter) // http://localhost:8000/api/hello
-server.use('/hello', goodbyeRouter) // http://localhost:8000/api/goodbye
+server.use('/hello', helloRouter) // http://localhost:8000/api/hello --> HelloRouter
+server.use('/hello', goodbyeRouter) // http://localhost:8000/api/goodbye --> GoodbyeRouter
 // Add more routes to the app
+server.use('/users', usersRouter) // http://localhost:8000/api/users --> UserRouter
 
 export default server
